tests/error/modifier_errors/captured_var_inout_own2.err
Error: Not owned (at $FILE:16:20)
   | 
14 |     with dagger:
15 |         with power(3):
16 |             discard(a)
   |                     ^ Function `discard` wants to take ownership of this argument,
   |                       but we cannot transfer ownership inside a modifier body

Notes:
   | 
12 | def test() -> None:
13 |     a = qubit()
   |     - Argument `a` defined here ...
14 |     with dagger:
15 |         with power(3):
   |              -------- outside the modifier block

Guppy compilation failed due to 1 previous error
